tests/sql_correctness/snapshots/query_simple_select__1.snap
---
source: tests/sql_correctness.rs
expression: formatted
---
Query: SELECT abalance FROM pgbench_accounts WHERE aid = 1

+----------+
| abalance |
+----------+
| 0        |
+----------+
